crates/parser/src/snapshots/parser__tests__ok_test@0034_simple_try_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "try { foo }\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0034_simple_try_expr.ath
---
TRY_EXPR
  TRY_KW "try"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  TRY_ARM
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
        WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

