crates/parser/src/snapshots/parser__tests__ok_test@0044_wildcard_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "_\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0044_wildcard_pat.ath
---
WILDCARD_PAT
  UNDERSCORE "_"
  WHITESPACE "\n"

