crates/parser/src/snapshots/parser__tests__ok_test@0045_simple_var_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "?foo:Int\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0045_simple_var_pat.ath
---
VAR_PAT
  QUESTION "?"
  IDENTIFIER
    IDENT "foo"
  COLON ":"
  IDENT_SORT
    IDENTIFIER
      IDENT "Int"
      WHITESPACE "\n"

