crates/parser/src/snapshots/parser__tests__ok_test@0048_simple_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "(some-var _)\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0048_simple_pat.ath
---
SOME_THING_PAT
  L_PAREN "("
  SOME_VAR_KW "some-var"
  WHITESPACE " "
  WILDCARD_PAT
    UNDERSCORE "_"
  R_PAREN ")"
  WHITESPACE "\n"

