crates/parser/src/snapshots/parser__tests__ok_test@0049_split_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "(split a b)\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0049_split_pat.ath
---
SPLIT_PAT
  L_PAREN "("
  SPLIT_KW "split"
  WHITESPACE " "
  IDENT_PAT
    IDENTIFIER
      IDENT "a"
      WHITESPACE " "
  IDENT_PAT
    IDENTIFIER
      IDENT "b"
  R_PAREN ")"
  WHITESPACE "\n"

